# AdG-gtk-theme

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  dark-index.theme  index.theme
src/gnome-shell/: gnome-shell-light.scss  gnome-shell.scss  meson.build
src/gnome-shell/gdm/: gnome-shell-theme.gresource.xml
src/gnome-shell/src/: _colors.scss  _common.scss  _drawing.scss
src/gtk-2.0/: gtkrc  gtkrc-dark  render-assets-external.sh  render-assets.sh
src/gtk-3.0/: _colors.scss  _fixt.scss  assets.txt  gtk-contained-dark.scss  gtk-contained.scss
